# The-Lonely-Terminal

./: .gitignore  Cargo.toml  GruvboxDarkHard.tet  MainMenu.cs  MainMenu.cs.uid  MainMenu.tscn  README.md  build.rs  icon.svg.import  make-bundle.py  project.godot  terminal.sln  test.gd  test.gd.uid
.cargo/: config.toml
addons/godot-vim/: godot-vim.gd.uid
audio/: T_retro_beep.wav.import
font/: FiraCodeNerdFont-Bold.ttf.import  FiraCodeNerdFont-Light.ttf.import  FiraCodeNerdFont-Medium.ttf.import  FiraCodeNerdFont-Regular.ttf.import  FiraCodeNerdFont-Retina.ttf.import  FiraCodeNerdFont-SemiBold.ttf.import  FiraCodeNerdFontMono-Bold.ttf.import  FiraCodeNerdFontMono-Light.ttf.import  FiraCodeNerdFontMono-Medium.ttf.import  FiraCodeNerdFontMono-Regular.ttf.import  FiraCodeNerdFontMono-Retina.ttf.import  FiraCodeNerdFontMono-SemiBold.ttf.import  FiraCodeNerdFontPropo-Bold.ttf.import  FiraCodeNerdFontPropo-Light.ttf.import  FiraCodeNerdFontPropo-Medium.ttf.import  FiraCodeNerdFontPropo-Regular.ttf.import  FiraCodeNerdFontPropo-Retina.ttf.import  FiraCodeNerdFontPropo-SemiBold.ttf.import  MartianMonoNF.ttf.import  TermPlusNF.ttf.import
src/: config.rs  font.rs  game.rs  main.rs  rl_port.rs  rl_util.rs  ui.rs
terminal/: project.godot
