[package]
name = "the-lonely-terminal"
version = "0.1.0"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
incremental = true
opt-level = 0

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bevy = "0.17.2"

[build-dependencies]
static_vcruntime = "2.0.0"
